[tool.poetry]
name = "spatial-mab-abm"
version = "0.1.0"
description = ""
authors = ["valery <vagechirkov@gmail.com>"]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.4.3"
mesa = {extras = ["all"], version = "^3.2.0"}
sbi = "^0.24.0"
wandb = {extras = ["media", "sweeps"], version = "^0.20.1"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
ruff = "^0.11.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
